# alava

./: .gitmodules  README.md  alava.cabal  doctest.json  fix-ghcjs.sh  gen.sh  index.html  publish.sh
src-exe/: Main.hs
src-js/: Main.hs
src-lib/: Alava.hs  Environment.hs  Equal.hs  Error.hs  HtmlPrint.hs  PrettyPrint.hs  SimpleParser.hs  Substitution.hs  Syntax.hs  TypeCheck.hs
src-tests/: Tests.hs
tests/: Hw1.alava  Hw2.alava  Lec1.alava  Lec3.alava  basic_syntax.alava  conditionals.alava  dependent.alava  records.alava  t1.alava  t2.alava  t3.alava  t4.alava
tests/pi-forall/: Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi
