name: alava
version: 1.0
cabal-version: >=1.11
build-type: Simple
license: AllRightsReserved
stability: experimental

Library
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs: src-lib
  Exposed-Modules: SimpleParser, Syntax, TypeCheck, Environment, Equal, PrettyPrint, HtmlPrint, Alava
  build-depends:
      base >4.9.1, foundation, mtl, blaze-markup, blaze-html, text

Executable main
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  main-is: Main.hs
  hs-source-dirs: src-exe
  build-depends: alava
      
Test-Suite doctests
  default-language: Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  type:          exitcode-stdio-1.0
  main-is:       Doctests.hs
  hs-source-dirs: src-tests
  build-depends: alava, base, doctest, doctest-discover

Test-Suite tests
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: src-tests
  build-depends: alava, base, foundation, tasty, tasty-hunit
