name: alava
version: 1.0
cabal-version: >=1.20
build-type: Simple
license: MIT
stability: experimental

Library
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs: src-lib
  Exposed-Modules: SimpleParser, Syntax, TypeCheck, Environment, Equal, PrettyPrint, HtmlPrint, Alava, Error, Substitution
  build-depends:
      base >4.9.0, foundation, mtl, blaze-markup, blaze-html, text, monad-logger, mmorph, clay, recursion-schemes

Executable main
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-record-updates -Wmissing-import-lists
  main-is: Main.hs
  hs-source-dirs: src-exe
  build-depends: alava, base >4.9.0, simple-reflect, foundation, text, blaze-html, monad-logger

Executable jsmain
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-record-updates -Wmissing-import-lists
  main-is: Main.hs
  hs-source-dirs: src-js
  build-depends: alava, base >4.9.0, blaze-markup, blaze-html, foundation, clay, ghcjs-ajax, async-ajax, text, monad-logger
  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
      
Test-Suite doctests
  default-language: Haskell2010
  ghc-options: -Wall -Wincomplete-record-updates -Wmissing-import-lists
  type:          exitcode-stdio-1.0
  main-is:       Doctests.hs
  hs-source-dirs: src-tests
  build-depends: alava, base, doctest, doctest-discover

Test-Suite tests
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Wincomplete-record-updates -Wmissing-import-lists
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: src-tests
  build-depends: alava, base, foundation, mtl, monad-logger, tasty, tasty-hunit, text
